# Karaoke-Lyrics

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
docs/: README.md  architecture.md  data-models.md  development-plan.md  feature-spec.md  module-design.md
docs/translations/: README.en.md  README.ja.md  README.zh-TW.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: export.rs  media.rs  mod.rs  project.rs  pronunciation.rs  system.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/engine/export/: ass_exporter.rs  json_exporter.rs  lrc_exporter.rs  mod.rs  types.rs  video_exporter.rs
src-tauri/src/engine/media/: mod.rs  probe.rs  waveform.rs
src-tauri/src/engine/pronunciation/: dictionary.rs  mod.rs  pinyin.rs
src/components/export/: ExportDialog.tsx
src/engine/: CanvasRenderer.ts  PlaybackClock.ts  PronunciationRenderer.ts  SweepEffect.ts  TextLayout.ts  TimingEngine.ts
src/hooks/: useKeyboard.ts  useTimingMode.ts
src/i18n/: index.ts
src/services/: charSplitter.ts  exportService.ts  pronunciationService.ts  textParser.ts
src/store/: index.ts  lyricsSlice.ts  mediaSlice.ts  projectSlice.ts  settingsSlice.ts  store.ts  styleSlice.ts  timingSlice.ts  uiSlice.ts
src/types/: export.ts  ipc.ts  lyrics.ts  media.ts  project.ts  settings.ts  style.ts
src/utils/: color.ts  timeFormat.ts
(+28 files in other folders)
