[package]
name = "karaoke-lyrics-maker"
version = "0.1.0"
description = "A desktop karaoke lyrics timing and styling editor"
authors = ["DPCau"]
edition = "2021"

[lib]
name = "karaoke_lyrics_maker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
symphonia = { version = "0.5", features = ["all"] }
hound = "3"
encoding_rs = "0.8"
walkdir = "2"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
bincode = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
